--- a/opis1.html
+++ b/opis1.html
@@ -6,14 +6,24 @@
     <meta charset="UTF-8">
 </head>
 <body>
+    <div class="header">
+        <img src="assets/samolot1.png" alt="logo">
+        <h1>Biuro podróży</h1> 
+        <div class="nav">
+            <a href="html.html"><div>Główna Strona</div> </a>
+            <a href="oferty.html"><div>Oferty</div> </a>
+            <a href="kontakt.html"><div>Kontakt</div> </a>
+            <a href="logowanie.html"><div>Zaloguj się</div> </a>
+        </div>
+        </div>      
     <div class="main">
         <div>
-            <img src="opis1.jpg" alt="">
+            <img src="assets/opis1.jpg" alt="">
             <h2> Dlaczego warto wybrać ten hotel </h2>
             <p> Hotel tylko dla Gości powyżej 12. roku życia w znanym kurorcie Marsa Alam, jest doskonałą opcją dla wszystkich, którzy cenią sobie komfortowy wypoczynek. Na miejscu 2 restauracje, 3 bary, 3 baseny, a także taras z zapierającym dech widokiem na morze. W ciągu dnia możesz spędzić czas na hotelowej plaży, poćwiczyć jogę lub pilates oraz zagrać w siatkówkę plażową, a wieczorem zaszaleć podczas animacji dla dorosłych. Po aktywnym dniu spędzonym w promieniach egipskiego słońca, zrelaksuj się w przestronnych i nowocześnie urządzonych pokojach. </p>
         </div>
         <div>
-            <img src="plaża1.jpg" alt="">
+            <img src="assets/plaża1.jpg" alt="">
         
             <h2>Plaża hotelowa</h2>
            <li> bezpośrednio przy hotelu </li>
@@ -42,7 +52,8 @@
         </div>   
     </div>
     <footer>
-        <h4>E-mail: biuropodróży_travelbag@gmail.com Kontakt: +48 678903245</h4>
+        <a href="mailto:biuropodróży_travelbag@gmail.com">E-mail: biuropodróży_travelbag@gmail.com</a>
+        <br><a href="tel:+48 678903245">+48 678903245</a>
     </footer>
 </body>
 </html>
