--- a/opis2.html
+++ b/opis2.html
@@ -6,14 +6,24 @@
     <meta charset="UTF-8">
 </head>
 <body>
+    <div class="header">
+        <img src="assets/samolot1.png" alt="logo">
+        <h1>Biuro podróży</h1> 
+        <div class="nav">
+            <a href="html.html"><div>Główna Strona</div> </a>
+            <a href="oferty.html"><div>Oferty</div> </a>
+            <a href="kontakt.html"><div>Kontakt</div> </a>
+            <a href="logowanie.html"><div>Zaloguj się</div> </a>
+        </div>
+        </div>      
     <div class="main">
         <div>
-            <img src="opis2.jpg" alt="">
+            <img src="assets/opis2.jpg" alt="">
             <h2> Dlaczego warto wybrać ten hotel </h2>
             <p> Hotel w odsłonie premium. Położony w pobliżu siostrzanego hotelu Meli Holiday, zaprojektowany z dbałością o detale, bezpośrednio przy piaszczystej plaży z bezpłatnym serwisem. Blisko stąd także do centrum Golem ze sklepami i restauracjami. Do dyspozycji Gości są 2 baseny, restauracja z kuchnią albańską i międzynarodową oraz bar serwujący różnorodne napoje – zarówno one, jak i posiłki dostępne są w wygodnej formule all inclusive. Oto świetne miejsce na przyjemne wakacje w Albanii. </p>
         </div>
        <div>
-        <img src="plaża2.jpg" alt="">
+        <img src="assets/plaża2.jpg" alt="">
         <h2>Plaża hotelowa</h2>
         <li> bezpośrednio przy hotelu </li>
         <li>wydzielona strefa hotelowa</li>
@@ -41,7 +51,8 @@
         </div>   
     </div>
     <footer>
-        <h4>E-mail: biuropodróży_travelbag@gmail.com Kontakt: +48 678903245</h4>
+        <a href="mailto:biuropodróży_travelbag@gmail.com">E-mail: biuropodróży_travelbag@gmail.com</a>
+        <br><a href="tel:+48 678903245">+48 678903245</a>
     </footer>
 </body>
 </html>
