--- a/opis3.html
+++ b/opis3.html
@@ -6,14 +6,24 @@
     <meta charset="UTF-8">
 </head>
 <body>
+    <div class="header">
+        <img src="assets/samolot1.png" alt="logo">
+        <h1>Biuro podróży</h1> 
+        <div class="nav">
+            <a href="html.html"><div>Główna Strona</div> </a>
+            <a href="oferty.html"><div>Oferty</div> </a>
+            <a href="kontakt.html"><div>Kontakt</div> </a>
+            <a href="logowanie.html"><div>Zaloguj się</div> </a>
+        </div>
+        </div>      
     <div class="main">
         <div>
-            <img src="opis3.jpg" alt="">
+            <img src="assets/opis3.jpg" alt="">
             <h2> Dlaczego warto wybrać ten hotel </h2>
             <p> Greckie wakacje w kameralnej atmosferze? Dlaczego nie! Malownicze otoczenie, zielony ogród, basen i nowocześnie urządzone pokoje – to największe atuty hotelu. Przygotowany z myślą o dorosłych, oferuje bary i restaurację serwującą dania kuchni greckiej i międzynarodowej, a fantastyczna piaszczysta plaża Marmari z wydmami znajdująca się w odległości kilkuminutowego spaceru od hotelu jest idealnym miejscem na błogi relaks w promieniach greckiego słońca. </p>
         </div>
         <div>
-            <img src="plaża3.jpg" alt="">
+            <img src="assets/plaża3.jpg" alt="">
             <h2>Plaża hotelowa</h2>
             <li> Marmari </li>
             <li>publiczna</li>
@@ -41,7 +51,8 @@
     </div>   
    </div>
    <footer>
-    <h4>E-mail: biuropodróży_travelbag@gmail.com Kontakt: +48 678903245</h4>
+    <a href="mailto:biuropodróży_travelbag@gmail.com">E-mail: biuropodróży_travelbag@gmail.com</a>
+    <br><a href="tel:+48 678903245">+48 678903245</a>
 </footer>
 </body>
 </html>
