--- a/opis4.html
+++ b/opis4.html
@@ -6,14 +6,24 @@
     <meta charset="UTF-8">
 </head>
 <body>
+    <div class="header">
+        <img src="assets/samolot1.png" alt="logo">
+        <h1>Biuro podróży</h1> 
+        <div class="nav">
+            <a href="html.html"><div>Główna Strona</div> </a>
+            <a href="oferty.html"><div>Oferty</div> </a>
+            <a href="kontakt.html"><div>Kontakt</div> </a>
+            <a href="logowanie.html"><div>Zaloguj się</div> </a>
+        </div>
+        </div>      
     <div class="main">
         <div>
-            <img src="opis4.jpg" alt="">
+            <img src="assets/opis4.jpg" alt="">
             <h2> Dlaczego warto wybrać ten hotel </h2>
             <p> Jedna z najbardziej dziewiczych wysp archipelagu zaprasza na egzotyczny urlop w cudownym i romantycznym otoczeniu. Zatrzymaj się w przestronnych, klimatycznych willach położonych pomiędzy białą plażą, a zielonymi górami, w jedynym hotelu na wyspie, która w 93% jest parkiem narodowym. Nie tylko widoki są tu wyjątkowe, ale również serwis i kuchnia – do wyboru aż 8 restauracji, w tym 7 à la carte, serwujących m.in. kuchnię kreolską i owoce morza. Polecamy zarówno na błogi relaks w otoczeniu przyrody, jak i aktywny wypoczynek – spacery plażą i lasami deszczowymi, przejażdżki na rowerach, kąpiele w basenie, tenis, a może sporty wodne? Spędź urlop tak, jak lubisz, tutaj wszystko jest dla Ciebie! </p>
         </div>
         <div>
-            <img src="plaża4.jpg" alt="">
+            <img src="assets/plaża4.jpg" alt="">
             <h2>Plaża hotelowa</h2>
             <li> bezpośrednio przy hotelu </li>
             <li>piaszczysta</li>
@@ -41,7 +51,8 @@
         </div>   
     </div>  
     <footer>
-        <h4>E-mail: biuropodróży_travelbag@gmail.com Kontakt: +48 678903245</h4>
-    </footer>   
+        <a href="mailto:biuropodróży_travelbag@gmail.com">E-mail: biuropodróży_travelbag@gmail.com</a>
+        <br><a href="tel:+48 678903245">+48 678903245</a>
+    </footer>  
 </body>
 </html>
