--- a/zapomnienie_hasło.html
+++ b/zapomnienie_hasło.html
@@ -6,7 +6,7 @@
     body{
     font-family: 'Arial';
     background-color: rgba(255, 255, 255, 0.4);
-    background-image: url('5.jpg');
+    background-image: url('assets/5.jpg');
     background-repeat: no-repeat;
     background-size: cover;  
     height: 100vh;
@@ -63,6 +63,16 @@
     </style>
 </head>
 <body>
+    <div class="header">
+        <img src="assets/samolot1.png" alt="logo">
+        <h1>Biuro podróży</h1> 
+        <div class="nav">
+            <a href="html.html"><div>Główna Strona</div> </a>
+            <a href="oferty.html"><div>Oferty</div> </a>
+            <a href="kontakt.html"><div>Kontakt</div> </a>
+            <a href="logowanie.html"><div>Zaloguj się</div> </a>
+        </div>
+        </div>      
     <div class="f">
         <div class="form1">
             <form>
@@ -75,5 +85,9 @@
             </div>
         </div>
     </div>  
+    <footer>
+        <a href="mailto:biuropodróży_travelbag@gmail.com">E-mail: biuropodróży_travelbag@gmail.com</a>
+        <br><a href="tel:+48 678903245">+48 678903245</a>
+    </footer>
 </body>
 </html>
