--- a/html.html
+++ b/html.html
@@ -7,18 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
-    <div class="page">
         <div class="header">
-            <img src="samolot1.png" alt="logo">
-            <h1>Biuro podróży</h1> 
+            <div>
+                <img src="assets/samolot1.png" alt="logo">
+            </div>      
             <div class="nav">
-                <a href="html.html"><div>Główna Strona</div> </a>
-                <a href="oferty.html"><div>Oferty</div> </a>
-                <a href="kontakt.html"><div>Kontakt</div> </a>
-                <a href="logowanie.html"><div>Zaloguj się</div> </a>
+                <ul>
+                    <li><a href="html.html"><div>Główna Strona</div></a></li>
+                    <li><a href="oferty.html"><div>Oferty</div></a></li>
+                    <li><a href="kontakt.html"><div>Kontakt</div></a></li>
+                    <li><a href="logowanie.html"><div>Zaloguj się</div></a></li>
+                </ul>             
             </div>
             </div>               
-        <div class="main">
+        <div class="container">
             <div class="wakacje" id="w1">
                 <h2> Last Minute! </h2> 
                 <button> Zarezerwuj już teraz!</button>
@@ -36,10 +38,11 @@
                 <button> Zarezerwuj już teraz!</button>
             </div>
         </div> 
+        <div class="footer">
             <footer>
-                <h4>E-mail: biuropodróży_travelbag@gmail.com Kontakt: +48 678903245</h4>
-            </footer>
-    </div>
-   
+                <a href="mailto:biuropodróży_travelbag@gmail.com">E-mail: biuropodróży_travelbag@gmail.com</a>
+                <br><br><a href="tel:+48 678903245">Kontakt: +48 678903245</a>
+            </footer>  
+        </div>         
 </body>
 </html>
