--- a/kontakt.html
+++ b/kontakt.html
@@ -5,25 +5,83 @@
     <style>
     body{
     font-family: 'Arial';
-    background-color: rgba(255, 255, 255, 0.4);
-    background-image: url('5.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;  
+    background-color: lightskyblue;
+    margin: 0;
+    padding: 0; 
     height: 100vh;
-    margin: 0;   
+
     }
-    .f{
-        padding-top: 110px;
+    *{box-sizing: border-box;}
+    body::before{
+    content: ' ';
+    display: block;
+    background-image: url('assets/5.jpg');
+    background-size: cover ;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    opacity: 0.15;
+    position: fixed;
     }
-    .form1{ 
+    .header {
+    background-color: rgba(0, 0, 128, 0.676);
+    width: 100%;
+    height: 80px;
+    padding: 10px;
+    }
+    img {
+    width: 12%;
+    min-width: 150px;
+    position: absolute;
+    margin: -25px 50px;
+    height: auto;
+    }
+    .nav{
+   text-align: center;
+   margin: 20px 0px;
+   display: flex;
+   justify-content: flex-end;
+    }
+    ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #0a1977ba;
+    }
+    li{
+        float: left;
+    }
+    .nav a:hover {
+        background-color: #111;
+    }
+    .nav div{
+        color: white;
+        min-width: 13vw;
+        margin: 0px 20px;
+        display: flex; 
+        align-items: center;
+        justify-content: center; 
+    } 
+    .nav a {
+        text-decoration: none;
+        font-weight: 600;
+        display: block;
+        padding: 14px 16px;
+        color: white;
+        text-align: center;
+
+    }
+    .container{ 
         background-color: rgba(0, 0, 128, 0.377); 
-        height: 430px; 
-        padding: 15px; 
-        margin: 0px auto;
-		width:550px;
+        max-width: 600px;
+        max-height: 800px;
+        padding: 15px;  
         color: white;
         border-radius: 8px;
-
+        margin: 15px auto 80px auto;
     }
     label{
 	    width:100%;
@@ -67,9 +125,27 @@
         box-sizing: border-box;
         padding: 10px;
     }
-
+    footer{
+    background-color: rgba(0, 0, 128, 0.676);
+    text-align: center;
+    height: 80px;
+    width: 100%;
+    padding: 15px;
+    margin: auto 0 0 0;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    }
+    footer a{
+        color: white;
+        text-decoration: none;
+    }
+    footer a:hover{
+        color: lightblue;
+    }
     @media only screen and (max-width: 991px){
-    .form1{
+    .container{
         width: 340px;     
         height: 450px; 
     }
@@ -78,15 +154,24 @@
         height: 45px;
         margin: 10px 0px;;
     }
-    .f{
-        padding-top: 18px;
-    }
 }
     </style>
 </head>
 <body>
-    <div class="f">
-        <div class="form1">
+    <div class="header">
+        <div>
+            <img src="assets/samolot1.png" alt="logo">
+        </div>      
+        <div class="nav">
+            <ul>
+                <li><a href="html.html"><div>Główna Strona</div></a></li>
+                <li><a href="oferty.html"><div>Oferty</div></a></li>
+                <li><a href="kontakt.html"><div>Kontakt</div></a></li>
+                <li><a href="logowanie.html"><div>Zaloguj się</div></a></li>
+            </ul>             
+        </div>
+        </div>       
+        <div class="container">
             <form>
                 <h2>Formularz kontaktowy: </h2>
                 <input type="text" placeholder="Imię..." class="p1"><br>
@@ -105,7 +190,11 @@
             <input type="reset" class="button" value="Resetuj">
             </form>
         </div>
-    </div>
-    
+        <div class="footer">
+            <footer>
+            <a href="mailto:biuropodróży_travelbag@gmail.com">E-mail: biuropodróży_travelbag@gmail.com</a>
+            <br><br><a href="tel:+48 678903245">Kontakt: +48 678903245</a>
+        </footer>   
+    </div>       
 </body>
 </html>
