wyraźniejszy samolot mobilka

--- a/kontakt.html
+++ b/kontakt.html
@@ -201,6 +201,11 @@ p{
     }
   }  
     @media only screen and (max-width: 991px){
+        img{
+        height: 100px;
+        width: auto;
+        margin: 0px 50px;
+    }
     .container{
         width: 340px;     
         height: 450px; 
