--- a/logowanie.html
+++ b/logowanie.html
@@ -132,7 +132,7 @@
     margin: 5px 0px;
 }
     @media only screen and (max-width: 620px){  
-        .header {
+    .header {
         height: 220px;
     }
     .footer{
@@ -186,7 +186,12 @@
     }
   }  
     @media only screen and (max-width: 991px){ 
-    .form1{
+        img{
+        height: 100px;
+        width: auto;
+        margin: 0px 50px;
+    }
+    .container{
         width: 300px;
         height: 350px; 
     }
@@ -194,9 +199,7 @@
         width: 70px;
         height: 45px;
     }
-    .f{
-        padding-top: 40px;
-    }
+
 }
     </style>
 </head>
