--- a/zapomnienie_hasło.html
+++ b/zapomnienie_hasło.html
@@ -5,23 +5,77 @@
     <style>
     body{
     font-family: 'Arial';
-    background-color: rgba(255, 255, 255, 0.4);
-    background-image: url('assets/5.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;  
+    background-color: lightskyblue;
+    margin: 0;
+    padding: 0; 
     height: 100vh;
     }
-    .form1{ 
+    *{box-sizing: border-box;}
+    body::before{
+    content: ' ';
+    display: block;
+    background-image: url('assets/5.jpg');
+    background-size: cover ;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    opacity: 0.15;
+    position: fixed;
+    }
+    .header {
+    background-color: rgba(0, 0, 128, 0.676);
+    width: 100%;
+    height: 80px;
+    padding: 10px;
+    }
+    img {
+    width: 100px;
+    min-width: 150px; 
+    position: absolute;  
+    margin: 0px 70px;  
+    height: auto;
+    }
+    .header-menu{
+    margin: 23px -10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    }
+    ul{
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    text-align: center;
+    overflow: hidden;
+
+    }
+    li{
+        float: left;
+    }
+    .header-menu a:hover {
+        background-color: rgba(0, 0, 128, 0.918);
+        transition: background-color 2s;   
+    }
+    .header-menu a {
+        text-decoration: none;
+        font-weight: 600;
+        padding: 14px 16px; 
+        color: white;
+        min-width: 13vw;
+        margin: 0px 40px; 
+        display: block; 
+        width: fit-content;
+    }
+    .container{ 
         background-color: rgba(0, 0, 128, 0.377); 
-        height: 250px; 
-        padding: 20px; 
-		margin:0 auto;
-		width:500px;
+        max-width: 600px;
+        max-height: 800px;
+        padding: 15px;  
         color: white;
         border-radius: 8px;
-    }
-    .f{
-        padding-top: 150px;
+        margin: 15px auto 80px auto;
     }
     label{	   
 	    display: flex;	
@@ -46,9 +100,93 @@
             box-sizing: border-box;
             padding: 10px;
     }
+    footer{
+    background-color: rgba(0, 0, 128, 0.676);
+    text-align: center;
+    height: 60px;
+    width: 100%;
+    padding: 15px;
+    margin: auto 0 0 0;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    }
+    footer a{
+        color: white;
+        text-decoration: none;
+    }
+    footer a:hover{
+        color: lightblue;
+    }
+    .mail{
+        margin: 0px 40px;
+    }
+    p{
+    color: white;
+    margin: 5px 0px;
+    }
+@media only screen and (max-width: 620px){  
+    .header {
+        height: 220px;
+    }
+    .footer{
+        height: auto;
+    }
+    li{
+        flex-direction: column;
+        float: none;
+    }
+    .mobile-container {
+        max-width: 400px;
+        margin: auto;
+        color: white;     
+    }    
+    .topnav {
+        background-color: rgba(0, 0, 128, 0.918);
+        position: relative;
+    }
+    .topnav .header-menu {
+        display: none;
+    }
+      
+    .topnav a {
+        color: white;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+        display: block;
+    }
+      
+    .topnav a.icon {
+        background: black;
+        display: block;
+        position: absolute;
+        width: 200px; 
+        height: 30px;
+        padding: 0; 
+        text-align: center; 
+        line-height: 60px; 
+        right: 0;
+        top: 0; 
+    }   
+    .topnav a:hover {
+        background-color: #ddd;
+        color: black;
+    }    
+    .active {
+        background-color: rgba(170, 170, 230, 0.674);
+        color: white;
+    }
+  }  
 
     @media only screen and (max-width: 991px){
-    .form1{
+        img{
+        height: 100px;
+        width: auto;
+        margin: 0px 50px;
+    }
+    .container{
         width: 300px;
         height: 250px; 
     }
@@ -63,18 +201,41 @@
     </style>
 </head>
 <body>
-    <div class="header">
-        <img src="assets/samolot1.png" alt="logo">
-        <h1>Biuro podróży</h1> 
-        <div class="nav">
-            <a href="html.html"><div>Główna Strona</div> </a>
-            <a href="oferty.html"><div>Oferty</div> </a>
-            <a href="kontakt.html"><div>Kontakt</div> </a>
-            <a href="logowanie.html"><div>Zaloguj się</div> </a>
-        </div>
-        </div>      
-    <div class="f">
-        <div class="form1">
+    <header class="header">
+        <div class="header-logo">
+            <a href="index.html"><img src="assets/samolot1.png" alt="logo"></a>
+        </div>   
+        <div class="mobile-container">
+            <div class="topnav">
+                <a href="#home" class="active"></a>
+                <ul class="header-menu">
+                    <li>
+                        <a href="oferty.html">Oferty</a>
+                    </li>
+                    <li>
+                        <a href="kontakt.html">Kontakt</a>
+                    </li>
+                    <li>
+                        <a href="logowanie.html">Zaloguj się</a>
+                    </li>
+                </ul>
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                <!-- <i class="fa fa-bars"></i> -->
+                </a>
+            </div>
+        </div>   
+    </header> 
+    <script>
+        function myFunction() {
+          var x = document.querySelector(".header-menu");
+          if (x.style.display === "block") {
+            x.style.display = "none";
+          } else {
+            x.style.display = "block";
+          }
+        }
+        </script>
+        <div class="container">
             <form>
                 <h2>Zapomniałeś hasła </h2>
                 <input type="text" placeholder="Podaj swój e-mail..." class="p1"><br>
@@ -83,11 +244,11 @@
             <input type="reset" class="button" value="Resetuj">
             </form>
             </div>
-        </div>
-    </div>  
-    <footer>
-        <a href="mailto:biuropodróży_travelbag@gmail.com">E-mail: biuropodróży_travelbag@gmail.com</a>
-        <br><a href="tel:+48 678903245">+48 678903245</a>
-    </footer>
+        </div> 
+        <footer class="footer">           
+            <a href="mailto:biuropodróży_travelbag@gmail.com" class="mail">E-mail: biuropodróży_travelbag@gmail.com</a>
+            <a href="tel:+48 678903245" class="contact">Kontakt: +48 678903245</a>
+            <br><p>Copyright © 2024 TravelBag. Wszelkie prawa zastrzeżone.</p>
+        </footer> 
 </body>
 </html>
