--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pl">
 <head>
     <link rel="stylesheet" href="main.css">
+    <script src="main.js"></script>
     <meta charset="UTF-8">
     <title>Moja Strona</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,7 +14,6 @@
         </div>   
         <div class="mobile-container">
             <div class="topnav">
-                <a href="#home" class="active"></a>
                 <ul class="header-menu">
                     <li>
                         <a href="oferty.html">Oferty</a>
@@ -25,22 +25,12 @@
                         <a href="logowanie.html">Zaloguj się</a>
                     </li>
                 </ul>
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                <!-- <i class="fa fa-bars"></i> -->
-                </a>
+                <button href="javascript:void(0);"  class="icon" onclick="myFunction()">
+                <img src="hamburger.png"  class="header-icon" alt="">
+                </button>
             </div>
         </div>   
     </header> 
-    <script>
-        function myFunction() {
-          var x = document.querySelector(".header-menu");
-          if (x.style.display === "block") {
-            x.style.display = "none";
-          } else {
-            x.style.display = "block";
-          }
-        }
-        </script>
 
     <div class="container">
         <div class="wakacje" id="w1">
@@ -61,10 +51,18 @@
             </div>
         </div>
 
-    <footer class="footer">           
-        <a href="mailto:biuropodróży_travelbag@gmail.com" class="mail">E-mail: biuropodróży_travelbag@gmail.com</a>
-        <a href="tel:+48 678903245" class="contact">Kontakt: +48 678903245</a>
-        <br><p>Copyright © 2024 TravelBag. Wszelkie prawa zastrzeżone.</p>
+    <footer class="footer">   
+        <!-- <div class="footer-logo">
+            <a href="index.html"><img src="assets/samolot1.png" alt="logo"></a>
+        </div>  -->
+        <ul class="footer-menu">
+            <li>
+                <a href="mailto:biuropodróży_travelbag@gmail.com" class="mail">Napisz do nas! biuropodróży_travelbag@gmail.com</a>
+            </li>
+            <li>
+                <a href="tel:+48 678903245" class="contact">Skontaktuj się z nami!</a>
+            </li>
+        </ul>                
     </footer>          
 </body>
 </html>
