--- a/logowanie.html
+++ b/logowanie.html
@@ -108,7 +108,7 @@
     footer{
     background-color: rgba(0, 0, 128, 0.676);
     text-align: center;
-    height: 60px;
+    height: 50px;
     width: 100%;
     padding: 15px;
     margin: auto 0 0 0;
@@ -117,10 +117,23 @@
     left: 0;
     right: 0;
     }
-    footer a{
-        color: white;
-        text-decoration: none;
-    }
+    .footer-logo{
+    float: left;
+    margin: -25px 0px;
+    position: absolute;
+    height: 50px;
+}
+.footer-menu{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.footer a{
+    color: white;
+    text-decoration: none;
+    margin: 0px 40px;
+    font-size: small;
+}
     footer a:hover{
         color: lightblue;
     }
@@ -251,10 +264,18 @@
             </form>
             </div>
         </div>
-        <footer class="footer">           
-            <a href="mailto:biuropodróży_travelbag@gmail.com" class="mail">E-mail: biuropodróży_travelbag@gmail.com</a>
-            <a href="tel:+48 678903245" class="contact">Kontakt: +48 678903245</a>
-            <br><p>Copyright © 2024 TravelBag. Wszelkie prawa zastrzeżone.</p>
-        </footer> 
+        <footer class="footer">   
+            <!-- <div class="footer-logo">
+                <a href="index.html"><img src="assets/samolot1.png" alt="logo"></a>
+            </div>  -->
+            <ul class="footer-menu">
+                <li>
+                    <a href="mailto:biuropodróży_travelbag@gmail.com" class="mail">Napisz do nas! biuropodróży_travelbag@gmail.com</a>
+                </li>
+                <li>
+                    <a href="tel:+48 678903245" class="contact">Skontaktuj się z nami!</a>
+                </li>
+            </ul>                
+        </footer>    
 </body>
 </html>
