--- a/oferty.html
+++ b/oferty.html
@@ -62,10 +62,18 @@
             </div>
         </div>
     </div>
-    <footer class="footer">           
-        <a href="mailto:biuropodróży_travelbag@gmail.com" class="mail">E-mail: biuropodróży_travelbag@gmail.com</a>
-        <a href="tel:+48 678903245" class="contact">Kontakt: +48 678903245</a>
-        <br><p>Copyright © 2024 TravelBag. Wszelkie prawa zastrzeżone.</p>
-    </footer> 
+    <footer class="footer">   
+        <!-- <div class="footer-logo">
+            <a href="index.html"><img src="assets/samolot1.png" alt="logo"></a>
+        </div>  -->
+        <ul class="footer-menu">
+            <li>
+                <a href="mailto:biuropodróży_travelbag@gmail.com" class="mail">Napisz do nas! biuropodróży_travelbag@gmail.com</a>
+            </li>
+            <li>
+                <a href="tel:+48 678903245" class="contact">Skontaktuj się z nami!</a>
+            </li>
+        </ul>                
+    </footer>    
 </body>
 </html>
