header, footer na podstronach, kafelki zaczęta zmiana tekstu

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     <div class="container">
         <div class="wakacje" id="w1">
             <h2> Last Minute! </h2> 
+            <h4>Lorem ipsum</h4>
+            <h5>1600 zł/os</h5>
             <button> Zarezerwuj już teraz!</button>
         </div>
         <div class="wakacje" id="w2">
@@ -56,12 +58,13 @@
             <a href="index.html"><img src="assets/samolot1.png" alt="logo"></a>
         </div>  -->
         <ul class="footer-menu">
-            <li>
+            <p>© Copyright TravelBag 2024</p>
+            <!-- <li>
                 <a href="mailto:biuropodróży_travelbag@gmail.com" class="mail">Napisz do nas! biuropodróży_travelbag@gmail.com</a>
             </li>
             <li>
                 <a href="tel:+48 678903245" class="contact">Skontaktuj się z nami!</a>
-            </li>
+            </li> -->
         </ul>                
     </footer>          
 </body>
