--- a/oferty.html
+++ b/oferty.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" href="oferty.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="main.js"></script>
     <meta charset="UTF-8">
 </head>
 <body>
@@ -12,7 +13,6 @@
         </div>   
         <div class="mobile-container">
             <div class="topnav">
-                <a href="#home" class="active"></a>
                 <ul class="header-menu">
                     <li>
                         <a href="oferty.html">Oferty</a>
@@ -24,22 +24,12 @@
                         <a href="logowanie.html">Zaloguj się</a>
                     </li>
                 </ul>
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                <!-- <i class="fa fa-bars"></i> -->
-                </a>
+                <button href="javascript:void(0);"  class="icon" onclick="myFunction()">
+                <img src="hamburger.png"  class="header-icon" alt="">
+                </button>
             </div>
         </div>   
     </header> 
-    <script>
-        function myFunction() {
-          var x = document.querySelector(".header-menu");
-          if (x.style.display === "block") {
-            x.style.display = "none";
-          } else {
-            x.style.display = "block";
-          }
-        }
-        </script> 
     <div class="container">
         <div class="oferta" id="o1">
             <div class="tekst">
@@ -66,14 +56,9 @@
         <!-- <div class="footer-logo">
             <a href="index.html"><img src="assets/samolot1.png" alt="logo"></a>
         </div>  -->
-        <ul class="footer-menu">
-            <li>
-                <a href="mailto:biuropodróży_travelbag@gmail.com" class="mail">Napisz do nas! biuropodróży_travelbag@gmail.com</a>
-            </li>
-            <li>
-                <a href="tel:+48 678903245" class="contact">Skontaktuj się z nami!</a>
-            </li>
-        </ul>                
+        <div class="footer-menu">
+            <p>© Copyright TravelBag 2024</p>   
+        </div>     
     </footer>    
 </body>
 </html>
