--- a/index.html
+++ b/index.html
@@ -33,11 +33,15 @@
     </header> 
 
     <div class="container">
-        <div class="wakacje" id="w1">
-            <h2> Last Minute! </h2> 
-            <h4>Lorem ipsum</h4>
-            <h5>1600 zł/os</h5>
-            <button> Zarezerwuj już teraz!</button>
+        <div class="wrap">
+            <div class="wakacje" id="w1">
+                <h2> Last Minute! </h2> 
+                <button> Zarezerwuj już teraz!</button>
+            </div>
+            <div class="text"> 
+                <h4>Lorem ipsum</h4>
+                <h5>1600 zł/os</h5>
+            </div>
         </div>
         <div class="wakacje" id="w2">
             <h2> Last Minute! </h2> 
